Fix: added overflow to mobile memu

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -259,6 +259,7 @@
       z-index: 99
       &--active
         display: block
+        overflow: auto
     &__user
       &--mobile
         flex-direction: column
